--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-= redmine_icalendar_export (redmics)
+= redmine_ical
 
 ICalendar (ICS) view of issue- and version-deadlines.
 
@@ -14,4 +14,4 @@ Further, a the hook view_calendars_show_bottom needs to be present in app/views/
 
 == Implementation details
 
-Issues are exported as VEVENT-items with their due-date as the event date. The same applies to versions. Unassigned issues have the status TENTATIVE.
+Issues are exported as VEVENT-items with their due-date as the event date. The same applies to versions.
