--- a/README.textile
+++ b/README.textile
@@ -2,13 +2,7 @@ h1. Redmine Ical
 
 ICalendar (ICS) view of issue and version due dates.
 
-*Warning*: I am currently no longer actively developping for Redmine and have
-become a member of the "ChiliProject":https://www.chiliproject.org core team
-instead. I will no longer put any active effort into maintaining this plugin
-for Redmine and will focus in getting its functionality into ChiliProject
-instead. This especially means that I'll consider patches and code contributions
-and I might fix small bugs if reported, nothing more. If anyone wants to take
-over this project, please contact me through GitHub.
+*Warning*: I am currently no longer actively developping for Redmine and have become a member of the "ChiliProject":https://www.chiliproject.org core team instead. I will no longer put any active effort into maintaining this plugin for Redmine and will focus in getting its functionality into ChiliProject instead. This especially means that I'll consider patches and code contributions and I might fix small bugs if reported, nothing more. If anyone wants to take over this project, please contact me through GitHub.
 
 h2. Requirements
 
@@ -16,8 +10,7 @@ This plugin aims to be compatible with
 
 * Redmine
 
-This plugin is pretty basic and should work with every flavor of Redmine. The
-pre-1.2.1-version should work with ChiliProject too, this is untested though.
+This plugin is pretty basic and should work with every flavor of Redmine. The pre-1.2.1-version should work with ChiliProject too, this is untested though.
 
 In addition to that, you will need the following gems:
 
